# rl4llm

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  coherent_content.md  pyproject.toml  requirements.txt  run.sh  run_remote_cloud.md  useful_prompts.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  issue.md
configs/: coherent_classification_config.yaml  coherent_classifier_config.yaml  dapo_config.yaml  dapo_grpo_config.yaml  discount_explore_grpo_config.yaml  discount_grpo_config.yaml  ds_explore_grpo_config.yaml  ds_grpo_config.yaml  ds_grpo_train_config.yaml  explore_grpo_config.yaml  extended_grpo_config.yaml  group_grpo_config.yaml  grpo_config.yaml  grpo_tools_config.yaml  grpo_train_config.yaml  ppo_config.yaml  ppo_train_config.yaml  ppo_train_test_config.yaml  sft_train_config.yaml  synthetic_data_config.yaml  test_grpo_train_config.yaml  value_net_config.yaml
data/coherent_dataset/: metadata.json
docs/: getting_started.md
experiments/: analyze_app.py  build_coherent_dataset.py  check_deepspeed_flash_attention.py  classifier_trainer.py  example_sglang_engine.py  experiment_sglang_cohost.py
notebooks/: analyze_coherent_dataset.ipynb  analyze_grpo_group_reward.ipynb  analyze_random_start.ipynb  analyze_samples.ipynb  analyze_synthetic_generator.ipynb  analyze_trl_setting.py  build_coherent_dataset.ipynb  check_chat_template.ipynb  check_function.ipynb  check_ideas.ipynb  check_qwen_tokenizer.ipynb  convert_mdp_cot_data.ipynb  group_temperature.ipynb  idea_on_discount.ipynb  mini-deepseek-r1-aha-grpo.ipynb  multistep_chat.ipynb  playground_sglang.ipynb  playground_vllm.ipynb  test.py  test_discount.ipynb  test_exploration_schedule.ipynb  test_group_temperature.py  test_lr_schedule.ipynb  test_vllm.ipynb  trl-deepseek-r1-grpo.ipynb
runs/coherent_classification_longformer/: config.yaml
runs/coherent_classifier_longformer/: config.yaml
runs/coherent_classifier_qwen2.5_0.5b/: config.yaml
runs/discount_explore_grpo_qwen2.5_1.5b_gsm8k/: config.yaml
runs/discount_grpo_qwen2.5_1.5b_gsm8k/: config.yaml
runs/ds_explore_grpo_qwen2.5_1.5b_gsm8k/: config.yaml
runs/ds_explore_grpo_qwen2.5_1.5b_gsm8k_run1/: config.yaml
runs/ds_grpo_qwen2.5_1.5b_gsm8k/: config.yaml
runs/enhanced_grpo_qwen2.5_0.5b_gsm8K_run1/: config.yaml
runs/enhanced_grpo_qwen2.5_0.5b_gsm8k/: config.yaml
runs/enhanced_grpo_qwen2.5_1.5b_gsm8k/: config.yaml
runs/enhanced_grpo_qwen2.5_3b_gsm8k/: config.yaml
runs/enhanced_grpo_qwen2.5_3b_math/: config.yaml
runs/enhanced_grpo_qwen2.5_3b_math_run1/: config.yaml
runs/enhanced_grpo_qwen2.5_7b_math/: config.yaml
scripts/: README.md  run_train_dapo.py  run_train_dapo_grpo.py  run_train_explore_grpo.py  run_train_extended_grpo.py  run_train_grpo.py  run_train_grpo_tools.py  run_train_ppo.py  run_train_value_net.py
tests/: conftest.py
(+272 files in other folders)
