[project]
name = "rl4llm"
version = "0.1.0"
description = "RL for LLM"
readme = "README.md"
authors = [{ name = "Michael Hu", email = "michaelnny@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "mpi4py==4.0.3",
    "mpmath==1.3.0",
    "huggingface-hub==0.30.1",
    "accelerate==1.6.0",
    "bitsandbytes==0.45.4",
    "flash_attn==2.7.4.post1",
    "datasets==3.5.0",
    "deepspeed==0.16.7",
    "transformers==4.51.3",
    "triton==3.2.0",
    "torch==2.5.1",
    "sglang==0.4.6.post3",
    "sgl-kernel==0.1.2",
    "flashinfer-python==0.2.5",
    "torch-memory-saver==0.0.5",
    "pyarrow==19.0.1",
    "pydantic==2.11.2",
    "packaging==24.2",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "psutil==7.0.0",
    "PyYAML==6.0.2",
    "sympy==1.13.1",
    "tensorboard==2.19.0",
    "tqdm==4.67.1",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.black]
line-length = 80
target-version = ["py310"]
skip-string-normalization = true

[tool.flake8]
ignore = ["E203", "E722", "E304", "E402", "E501", "F401", "F403", "F811", "F841", "W503"]
max-line-length = 80
max-complexity = 30
select = ["B", "C", "E", "F", "W"]
exclude = [".git", "__pycache__", "notebooks/*", "docs/*", "build/*", "dist/*"]

[tool.pytest.ini_options]
pythonpath = [".", "src", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
