[project]
name = "rl4llm"
version = "0.1.0"
description = "RL for LLM"
readme = "README.md"
authors = [{ name = "Michael Hu", email = "michaelnny@gmail.com" }]
requires-python = ">=3.11"


[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.black]
line-length = 80
target-version = ["py310"]
skip-string-normalization = true

[tool.flake8]
ignore = ["E203", "E722", "E304", "E402", "E501", "F401", "F403", "F811", "F841", "W503"]
max-line-length = 80
max-complexity = 30
select = ["B", "C", "E", "F", "W"]
exclude = [".git", "__pycache__", "notebooks/*", "docs/*", "build/*", "dist/*"]

[tool.pytest.ini_options]
pythonpath = [".", "src", "tests"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
